# explainium

./: .gitignore  next.config.ts  package-lock.json  package.json  pyproject.toml  report.md  requirements.txt
api/: index.py  main.py
api/explainium_agent/: main.py
api/explainium_agent/tools/: custom_tool.py
app/: globals.css  layout.tsx  page.tsx
components/ui/: toast.tsx
explainium_agent/: README.md  api.py  pyproject.toml  report.md  test.py
explainium_agent/db/: chroma.sqlite3
explainium_agent/src/explainium_agent/: crew.py
explainium_agent/src/explainium_agent/config/: agents.yaml  tasks.yaml
explainium_agent/src/explainium_agent/tools/: custom_tool.py
hooks/: use-toast.ts
