[project]
name = "explainium_agent"
version = "0.1.0"
description = "explainium_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "fastapi>=0.115.12",
    "supadata>=1.2.1",
]

[project.scripts]
run_crew = "explainium_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
